<resources>
    <string name="app_name">Eggs Delivery</string>
    <string name="BTN_CONTINUE">Continue</string>
    <string name="NAME">Name</string>
    <string name="PHONE">Phone</string>
    <string name="ADDRESS">Address</string>
    <string name="HINT_NAME">Add Your Name/Nickname</string>
    <string name="HINT_PHONE">Please Enter Your Phone</string>
    <string name="HINT_ADDRESS">Add Your Delivery Address</string>
    <string name="LBL_TYPE1_Name">White Egg</string>
    <string name="LBL_TYPE2_Name">Red Egg</string>
    <string name="LBL_TYPE3_Name">Local Egg</string>
    <string name="QUANTITY">Quantity</string>
    <string name="PRICE">Price</string>
    <string name="TOTAL_PRICE">Total Price</string>
    <string name="NOTE">Note</string>
    <string name="BTN_CANCEL">Cancel</string>
    <string name="BTN_CONFIRM">Confirm</string>
    <string name="BTN_OK">Ok</string>
    <string name="HINT_ADD_NOTE">Please Add Your Note Here</string>
    <string name="SAVE_NOTE">Note Saved</string>
    <string name="CANCEL_OPERATION">Operation Canceled</string>
    <string name="CONFIRM_OPERATION">Operation Sent to Seller</string>
    <string name="LE">L.E</string>
    <string name="TOTAL">Total: </string>
    <string name="NA">N.A</string>
    <string name="EDIT">Edit</string>

    <string name="NAME_ERROR">Please enter your name!</string>
    <string name="PHONE_ERROR">Please enter your phone number!</string>
    <string name="PHONE_NUM_COUNT_ERROR">Please enter your phone it has 11 digits!</string>
    <string name="ADDRESS_ERROR">Please enter your address!</string>

    <string name="facebook_app_id">196046211902494</string>
    <string name="fb_login_protocol_scheme">fb196046211902494</string>
    <string name="LANGUAGE">عربي</string>
    <string name="LOGOUT">Logout</string>
    <string name="LOGOUT_MESSAGE">Are you sure you want to logout</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="DONE">Done</string>
    <string name="GOOGLE">Continue with Google</string>
    <string name="SPLASH_STMT">Fresh eggs to your home :)</string>
</resources>